apps/calibre/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: calibre
  labels:
    kubernetes.io/metadata.name: calibre
