apps/calibre/deployment.yaml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calibre
  namespace: calibre
  labels: &labels
    app.kubernetes.io/component: web
    app.kubernetes.io/name: calibre
spec:
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      containers:
        - name: calibre-web
          image: lscr.io/linuxserver/calibre-web:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 1000m
              memory: 512Mi
          ports:
            - containerPort: 8083
              name: web
          volumeMounts:
            - name: config
              mountPath: /config
            - name: books
              mountPath: /books
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: calibre-config
        - name: books
          persistentVolumeClaim:
            claimName: calibre-books
