apps/calibre/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calibre
  namespace: calibre
  labels: &labels
    app.kubernetes.io/component: web
    app.kubernetes.io/name: calibre
spec:
  selector: *labels
  ports:
    - name: http
      protocol: TCP
      targetPort: 8083
      port: 8083
